# ferroDAC

./: .dockerignore  .gitignore  Makefile  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml  tests.yml
docs/: DESIGN.md  ROADMAP.md  qms200-driver.md
examples/ferrodac-ext-example/: README.md  ferrodac-extension.toml  pyproject.toml
examples/ferrodac-ext-example/ferrodac_ext_example/: __init__.py
examples/ferrodac-ext-example/ferrodac_ext_example/processors/: integrate.py
examples/ferrodac-ext-example/tests/: test_integrate.py
ferrodac/: __init__.py  __main__.py  _qtbinding.py  diagnostics.py
ferrodac/analysis/: __init__.py  cursor.py  deconvolve.py  gas.py  library.py  processor.py
ferrodac/core/: __init__.py  archive.py  base.py  bus.py  device.py  devicemeta.py  engine.py  graph.py  graph_selftest.py  history.py  identity.py  manager.py  markers.py  tag.py  (+9 more)
packaging/: ferrodac.spec  make_icon.py
prototypes/: gen_data.py  timeline_spike.py
server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
tests/: test_archive.py  test_camera_threading.py  test_dataplane.py  test_devicemeta.py  test_devicestore.py  test_diagnostics.py  test_docs.py  test_export.py  test_extensions.py  test_grpc_e2e.py  test_hub_backup.py  test_hub_projects.py  test_hub_tags.py  test_keithley6221.py  test_net_backup.py  test_net_teardown.py  test_plugin_sdk.py  test_projectgit.py  test_projects.py  test_shelly_cloud.py  test_sourceid.py  test_sync_chunking.py  test_ui_smoke.py
tools/: render.py
(+80 files in other folders)
